# geotab-fleet-mcp

./: .env.example  .gitignore  DEMO_NARRATION.md  LICENSE  PROMPTS.md  README.md  claude_desktop_config.json  fleet_enrichment.db  pyproject.toml
src/geotab_mcp/: __init__.py  api_tracker.py  cache.py  dashboard.py  data_connector.py  enrichment.py  gemini_client.py  geotab_client.py  google_maps.py  server.py  utils.py
static/css/: dashboard.css
static/js/: demo.js  fleet-map.js
templates/: dashboard.html  guide.html
